syntax = "proto3";

package de.heikoseeberger.reactiveflows.proto.flow;

import "google/protobuf/any.proto";

message GetMessages {
    int64 id = 1;
    int32 count = 2;
}
message Messages {
    repeated Message messages = 1;
}

message AddMessage {
    string text = 1;
}
message MessageAdded {
    string name = 1;
    Message message = 2;
}

message Envelope {
    string name = 1;
    Command command = 2;
}

message Command {
    oneof command {
        GetMessages getMessages = 1;
        AddMessage addMessage = 2;
        Stop stop = 3;
    }
}

message Stop {
}

message Message {
    int64 id = 1;
    string text = 2;
    Instant time = 3;
}

message Instant {
    int64 epochSecond = 1;
    int32 nano = 2;
}
