syntax = "proto3";

package de.heikoseeberger.reactiveflows.proto.flowfacade;

message GetFlows {
}
message Flows {
    repeated FlowDesc flows = 1;
}

message AddFlow {
    string label = 1;
}
message FlowAdded {
    FlowDesc desc = 1;
}
message FlowExists {
    FlowDesc desc = 1;
}

message RemoveFlow {
    string name = 1;
}
message FlowRemoved {
    string name = 1;
}
message FlowUnknown {
    string name = 1;
}

message GetPosts {
    string name = 1;
    int64 from = 2;
    int32 count = 3;
}

message AddPost {
    string name = 1;
    string text = 2;
}

message FlowDesc {
    string name = 1;
    string label = 2;
}
